# OssianBoard

./: .travis.yml  README.md  docker-compose.production.yml  docker-compose.yml
Logger/: Dockerfile  Logger.sln
Logger/Logger/: Logger.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
Logger/Logger/Controllers/: ArgumentsController.cs  LogController.cs  UserController.cs
Logger/Logger/Hubs/: LogViewerHub.cs  Logger.cs  LoggerHub.cs
Logger/Logger/Models/: ArgumentModel.cs  ConfigurationModel.cs  LogModel.cs  UserModel.cs
Logger/Logger/Properties/: launchSettings.json
Logger/Logger/Protos/: Config.proto  Log.proto
Logger/Logger/Services/: ArgumentService.cs  ConfigurationServiceImpl.cs  LogService.cs  OnlineLogServiceImpl.cs  UserService.cs
LoggerClient/: .gitignore  CMakeLists.txt
LoggerClient/LoggerClient/: CMakeLists.txt  LoggerClient.cpp
LoggerClient/LoggerClientGRPC/: CMakeLists.txt  LoggerClientGRPC.cpp
LoggerClient/LoggerClientGRPC/proto/: Config.proto  Log.proto
backend/: Dockerfile  NVConfig.json  app.js  package-lock.json
backend/Logger/: WeatherForecast.cs  appsettings.json
backend/Logger/Controllers/: ArgumentsController.cs  AuthController.cs  UserController.cs
backend/Logger/Models/: LogModel.cs
backend/Logger/Services/: LogQueue.cs  UserService.cs
backend/public/: index.html
backend/public/css/: chunk-010aa610.1f888a26.css  chunk-0657f79e.c9792241.css  chunk-vendors.25252dba.css
backend/public/js/: app.13a666a8.js  app.13a666a8.js.map  chunk-010aa610.32432dbe.js  chunk-010aa610.32432dbe.js.map  chunk-0657f79e.ba36e44e.js  chunk-0657f79e.ba36e44e.js.map  chunk-2d2086b7.e610c7fa.js  chunk-2d2086b7.e610c7fa.js.map  chunk-2d22d746.2890d088.js  chunk-2d22d746.2890d088.js.map  chunk-vendors.d5c661b7.js  chunk-vendors.d5c661b7.js.map
backend/routes/: config.js
client/: index.js  package-lock.json  package.json
frontend/: .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: arguments.js  log.js  user.js
frontend/src/components/: HelloWorld.vue  Plot.vue
frontend/src/http/: index.js
frontend/src/proto/: config.proto  parser.js  proto.js
frontend/src/router/: index.js
frontend/src/schema/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: arguments.js  log.js  user.js  view.js
frontend/src/utils/: auth.js  request.js  utility.js
frontend/src/views/: ClientChoose.vue  DefaultNavigator.vue  Layout.vue  Login.vue  OnlineLogger.vue  Profile.vue  config.vue
frontend/src/views/arguments/: Argument.vue  ArgumentList.vue  Arguments.vue  FormSchema.vue  ImportArgument.vue  NewArgument.vue  NewSnapshot.vue  SnapshotList.vue
frontend/src/views/layout/: DefaultNavigator.vue  Layout.vue
frontend/src/views/login/: Login.vue
frontend/src/views/onlineLogger/: ClientChoose.vue  OnlineLogger.vue
frontend/src/views/onlineLogger/components/: Plot.vue  material-dark-theme.js
frontend/src/views/profile/: Profile.vue
frontend/src/views/utils/: LoadingDialog.vue
log-cpp-client/: CMakeLists.txt
log-cpp-client/LoggerClient/: CMakeLists.txt  LoggerClient.h  RPC.hpp
log-cpp-client/LoggerClientGRPC/proto/: CMakeLists.txt
uploader/: Dockerfile  pom.xml  settings-docker.xml
uploader/src/main/java/com/shadowz/forward/: ForwardApplication.java
uploader/src/main/java/com/shadowz/forward/Controller/: BaseController.java  ForwardController.java
uploader/src/main/java/com/shadowz/forward/Utils/: GZIPUtils.java
uploader/src/test/java/com/shadowz/forward/: ForwardApplicationTests.java
